<resources>
    <string name="app_name">RoyalFitness Club</string>

    //for Login Process

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>

    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="login_text">LOGIN</string>
    <string name="credentials">Enter both Credentials</string>
    <string name="invalid">Email is in-valid </string>
    <string name="logging">Logging you in ..</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="notregistered">E-Mail is not registered</string>
    <string name="contentNotRegistered">Email ID is not registered, Would you like to register now ?</string>

    <string name="agree">Yes</string>
    <string name="disagree">No</string>

    // for signup process

    <string name="LastName">Last Name</string>
    <string name="SecondLastName">Second Last Name</string>
    <string name="fullName">Given Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="DateOfBirth">Date Of Birth</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="Birthday">Select Birthday</string>


    //billing

    <string name="planName">Plan Name : </string>
    <string name="demoPlan">Demo Plan</string>
    <string name="planDetails">Plan Details : </string>
    <string name="demoPlanDetails">Demo Details</string>
    <string name="dueDate">Due Date : </string>
    <string name="demoDueDate">1/1/2019</string>

    //svg arrays
    <color name="fill_color">#FFF66301</color>
    <string-array name="icon_string">
        <item>
            M454.7,81.5c-19,2.1 -41.6,6.1 -58.9,10.4 -174.5,44.1 -300.4,192.7 -314.9,371.6 -1.7,21.6 -0.7,67.7 2,87.5 12.9,94.7 55.7,180 123.2,245.5 65.3,63.3 145.6,102.1 237.3,114.6 22,3 70.8,3.8 93.6,1.4 41.6,-4.2 79.1,-13.3 115.8,-28.1 133.1,-53.7 229.2,-171.5 254.6,-311.9 4.9,-26.8 5.7,-35.9 6.3,-68 0.6,-34.1 -0.5,-50.4 -5.2,-78.2 -22.1,-130.1 -106.1,-243.4 -224.5,-302.8 -40.3,-20.2 -85.7,-34 -133.5,-40.6 -19.7,-2.7 -75.9,-3.5 -95.8,-1.4zM532,176.5c71,8.2 136.4,38.6 186.9,87 52.7,50.6 86.2,114.9 97.2,187 2.7,17.8 3.7,56.6 2,75.3 -3.7,38.6 -14.2,76.4 -30.9,111.2 -4.5,9.3 -5,10 -4.4,6 0.4,-2.5 0.7,-13.3 0.7,-24 -0.1,-21.6 -1.6,-33.7 -6.5,-52.6 -23,-87.5 -99.9,-150.5 -189.2,-155.2 -37.8,-2 -73.3,5 -105.3,20.8 -60.5,29.9 -101.5,84.8 -113.8,152.5 -2.9,16.1 -3.1,53.6 -0.3,68.5 4.3,23.6 9.9,40.6 19.6,60 23.2,46.6 61.7,81.9 110.4,101.1l12.1,4.8 -16.6,0.1c-9.2,-0 -21.3,-0.5 -27,-1 -148.5,-14.7 -266.2,-126.6 -289,-274.5 -2.7,-17.8 -3.7,-56.5 -2,-75.3 13.1,-139 112.1,-252.8 248.1,-285.1 11.3,-2.7 34.3,-6.5 44.5,-7.4 12.3,-1.1 51.2,-0.6 63.5,0.8z
        </item>
    </string-array>

    <integer-array name="colors_svg">
        <item>@color/fill_color</item>
    </integer-array>
</resources>
